chore: new Schemas
